tests/ui/typech/unify_var_decl_empty.stderr
× error[LM4139]: could not infer type argument
   ╭─[unify_var_decl_empty.lm:2:27]
 1 │ fn foo() {
 2 │     let arr = std::Array::new();
   │                           ^^^ could not infer type argument T
 3 │ }
   ╰──
   help: try specifying the type arguments explicitly